# render-engine

./: .gitignore  CMakeLists.txt  README.md
shader/: standard.frag
shader/debug/: debug-texture.frag
src/app/: main.cpp  test.cpp
src/components/: Component.hpp  Light.hpp  Mesh.cpp  Mesh.hpp  MeshRenderer.cpp  MeshRenderer.hpp  Transform.cpp  Transform.hpp
src/core/: Camera.cpp  Debug.cpp  Engine.cpp  Engine.hpp  GUI.hpp  IO.hpp  MaterialProperty.hpp  ModelManager.cpp  ModelManager.hpp  Picking.cpp  Picking.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  Skybox.cpp  Skybox.hpp  Texture.cpp  Texture.hpp  WindowManager.cpp  WindowManager.hpp
src/core/Material/: Material.cpp  Material.hpp  PBR_Material.cpp  PBR_Material.hpp
src/core/Mesh/: Mesh.cpp  Mesh.hpp  StaticMesh.cpp  StaticMesh.hpp
src/core/Shadow/: DirectionalShadow.cpp  DirectionalShadow.hpp  PointShadow.cpp  PointShadow.hpp  Shadow.hpp
src/core/shadow/: DirectionalShadow.cpp  PointShadow.cpp  PointShadow.hpp
src/core/uniform-blocks/: UniformBlock.hpp
src/deprecated/: Model.cpp  Model.hpp
